Disabling the history popup for the external url in the translation tab because I'm having trouble getting it to work right in FF2 (once a url is entered and the pane has been collapsed, upon expansion of the pane, the text entry in the url bar is disabled).  Will have to revisit this to find the correct solution.

--- a/basic-reader/trunk/skin/alph-panels.css
+++ b/basic-reader/trunk/skin/alph-panels.css
@@ -1,5 +1,5 @@
 #alph-right-panel {
-    width: 200px;
+    width: 400px;
 }
 
 #alph-morph-panel {
